[partly fix] overlap of emojis with clear-button

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ button {
 
 .clear-button {
   background: linear-gradient(112deg, #b28888, #c1b0b0);
+  transition: margin-top 0.3s ease;
 }
 
 #clock-container {
